--- a/client/public/index.html
+++ b/client/public/index.html
@@ -13,6 +13,9 @@
         font-family: "Open Sans", sans-serif;
         margin: 0;
       }
+      :root{
+        overflow-x: hidden;
+      }
     </style>
   <title>React App</title>
 </head>
